fix z-index range

--- a/src/common.blocks/range/range.less
+++ b/src/common.blocks/range/range.less
@@ -7,7 +7,7 @@ form.range {
     input[type="range"] {
         position: absolute;
         width: 100%;
-        z-index: 11;
+        z-index: 8;
     }
     input[type="range"] {
         -webkit-appearance: none; /* Скрывает слайдер, так что пользовательский слайдер может быть сделан */
